Fixing overflow issue with the work component

--- a/scss/blocks/_work.scss
+++ b/scss/blocks/_work.scss
@@ -1,6 +1,5 @@
 .work {
   position: relative;
-  overflow: hidden;
   color: $white;
   z-index: 40;
 
