--- a/scss/utils/_reset.scss
+++ b/scss/utils/_reset.scss
@@ -108,6 +108,10 @@ main {
   display: block;
 }
 
+main {
+  overflow: hidden;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
